--- a/QuasarWeb/templates/chat/insurance.html
+++ b/QuasarWeb/templates/chat/insurance.html
@@ -13,9 +13,9 @@
             <div class="chat-body active" id="about-insurance-chat">
           <div class="bot-message">
             <div class="bot-thumb">
-              <img src="{% static 'images/gondie.svg' %}" alt="Gondie Thumbnail" />
+              <img src="{% static 'images/ai_image.jpg' %}" alt="Quasar Market Thumbnail" />
             </div>
-            <p> Welcome to Gondola! My name is Gondie and I’m happy to meet you!  How can I help you?   </p>
+            <p> Welcome to Quasar Market AI Economic Search Tool </p>
           </div>
 
         </div>
