--- a/static/css/style.css
+++ b/static/css/style.css
@@ -144,12 +144,12 @@
   line-height: 25px;
   text-decoration: none;
   cursor: pointer;
-  background: #5FD64A;
+  background: #242222;
   color: #fff;
 }
 .secondary-btn.active{
-  background-color: #ffffff;
-  color: #1632B4;
+  background-color: #FF0000;
+  color: #ffffff;
   cursor: no-drop;
 }
 .chat-with-gondie .chat-btn:after{
@@ -195,10 +195,11 @@
   flex-flow: column;
   width: 28%;
   padding: 40px 0 20px;
-  background: #1632B4;
+  background: #151934;
   position: relative;
   z-index: 0;
 }
+
 .chat-pg-wrapper .left-section::after{
   content: "";
   position: absolute;
@@ -206,7 +207,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background: url(../images/bg-img.png) center bottom no-repeat;
+  #background: url(../images/bg-img.png) center bottom no-repeat;
   background-size: contain;
   z-index: -1;
   mix-blend-mode: multiply;
@@ -297,7 +298,7 @@
     cursor: no-drop;
 }
 .send-icon {
-  background: #1632B4;
+  background: #151934;
   border: none;
   border-radius: 12px;
   height: 52px;
@@ -343,8 +344,8 @@
   color: #111111;
 }
 .bot-message .bot-thumb {
-  width: 42px;
-  height: 42px;
+  width: 50px;
+  height: 50px;
   object-fit: cover;
   display: inline-flex;
   margin-right: 20px;
